--- a/packages/client/src/pages/SignInPage/ui/SignInPage.module.scss
+++ b/packages/client/src/pages/SignInPage/ui/SignInPage.module.scss
@@ -18,51 +18,74 @@ html {
 }
 
 .container {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  column-gap: 10%;
-  padding: 5%;
-}
-
-.column {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  padding: 0;
-}
-
-.button {
-  width: 100%;
+  text-align: center;
+  display: grid;
+  column-gap: 100px;
+  grid-template-columns: auto 300px 300px auto;
 }
 
 .title {
-  width: 100%;
+  text-align: center;
+  padding: 80px 0px 80px 0px;
   font-size: 80px;
-  display: flex;
-  justify-content: center;
-  padding: 5%;
+  grid-column: 1 / 5;
+  grid-row: 1;
 }
 
-.signup {
-  margin: 0;
+.gatito {
+  grid-column: 2;
+  grid-row: 2 / 4;
+}
+
+.new-gatito {
+  grid-column: 2;
+  grid-row: 4;
+}
+
+.fields {
+  grid-column: 3;
+  grid-row: 2;
+}
+
+.button {
+  grid-column: 3;
+  grid-row: 4;
 }
 
 @media screen and (max-width: 575px) {
   .container {
-    flex-direction: column;
-  }
-
-  .column {
-    display: block;
     text-align: center;
+    display: grid;
+    grid-template-columns: auto;
+    padding: 30px;
+    width: 100%;
   }
 
   .title {
     display: none;
   }
 
-  .signup {
-    margin-bottom: 10px;
+  .gatito {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .fields {
+    grid-column: 1;
+    grid-row: 2;
+    width: 100%;
+  }
+
+  .button {
+    grid-column: 1;
+    grid-row: 3;
+    width: 100%;
+  }
+
+  .new-gatito {
+    grid-column: 1;
+    grid-row: 4;
+    padding-top: 10px;
+    width: 100%;
   }
 }
