--- a/packages/client/src/shared/ui/Link/ui/Link.module.scss
+++ b/packages/client/src/shared/ui/Link/ui/Link.module.scss
@@ -5,30 +5,34 @@
 }
 
 .link {
-  font-family: 'VT323';
+  cursor: pointer;
+
+  font-family: var(--font-family);
   font-size: 100%;
   color: black;
   text-decoration: none;
-  cursor: pointer;
 }
 
 .icon {
-  width: 20px;
-  margin: 0;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+
+  width: 20px;
+  margin: 0;
 }
 
 .container {
   position: relative;
+
   height: 40px;
 }
 
 .link-centered {
-  width: 100%;
-  margin: 0;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+
+  width: 100%;
+  margin: 0;
 }
