--- a/packages/client/src/shared/ui/Button/ui/Button.module.scss
+++ b/packages/client/src/shared/ui/Button/ui/Button.module.scss
@@ -7,9 +7,11 @@
 .button {
   width: 100%;
   margin-bottom: 10px;
-  padding: 5px;
+  padding: 10px;
 
-  line-height: 30px;
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 48px;
   color: white;
 
   border: solid 1px var(--border-btn-color);
@@ -27,7 +29,7 @@
 .container {
   position: relative;
 
-  height: 40px;
+  height: 60px;
 }
 
 .icon {
@@ -35,6 +37,23 @@
   top: 50%;
   transform: translateY(-50%);
 
-  width: 20px;
+  width: 50px;
   margin: 0;
+}
+
+@media screen and (max-width: 575px) {
+  .button {
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 36px;
+  }
+
+  .icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+
+    width: 36px;
+    margin: 0;
+  }
 }
