--- a/packages/client/src/shared/ui/Input/ui/Input.module.scss
+++ b/packages/client/src/shared/ui/Input/ui/Input.module.scss
@@ -5,11 +5,20 @@
 .input {
   width: 100%;
   margin-bottom: 10px;
-  padding: 5px;
+  padding: 10px 20px;
 
-  line-height: 30px;
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 48px;
 
   background-color: var(--input-color);
   border: solid 1px var(--input-color);
   border-radius: 50px;
+}
+
+@media screen and (max-width: 575px) {
+  .input {
+    font-size: 28px;
+    line-height: 28px;
+  }
 }
