--- a/packages/client/src/shared/ui/Modal/ui/Modal.module.scss
+++ b/packages/client/src/shared/ui/Modal/ui/Modal.module.scss
@@ -1,24 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=VT323&display=swap';
 
 .modal__container {
   pointer-events: none;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
 
   position: fixed;
   z-index: 10;
   top: 0;
   left: 0;
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 100vw;
   height: 100vh;
 
+  font-family: 'VT323', monospace;
+
   opacity: 0;
   background-color: #00000059;
-
-  font-family: 'VT323', monospace;
 
   transition: 0.3s ease all;
 
@@ -34,6 +34,7 @@
 
   position: relative;
   z-index: 10;
+  transform: translateY(-50px);
 
   display: flex;
   flex-direction: column;
@@ -42,20 +43,17 @@
 
   padding: 0 20px 10px;
 
+  opacity: 0;
+  background-color: #F5EA84;
   border: 0;
   border-radius: 10px;
 
-  background-color: #F5EA84;
-
   transition: 0.3s ease all;
-  transform: translateY(-50px);
-
-  opacity: 0;
 
   &.active {
     pointer-events: auto;
 
-    transform: translateY(0px);
+    transform: translateY(0);
 
     height: auto;
     max-height: 95vh;
@@ -76,8 +74,8 @@
   margin-bottom: 10px;
   padding: 15px !important;
 
-  font-weight: 400;
   font-size: 48px;
+  font-weight: 400;
   line-height: 48px;
 
   border-top-left-radius: 10px;
@@ -87,14 +85,14 @@
 .modal__close {
   cursor: pointer;
 
-  color: white;
-
   width: 40px;
   height: 40px;
+
+  color: white;
 
   transition: color .2s;
 
   &:hover {
-    color: #cccccc;
+    color: #ccc;
   }
 }
