--- a/packages/client/src/app/styles/variables/global.scss
+++ b/packages/client/src/app/styles/variables/global.scss
@@ -1,4 +1,21 @@
-:root {
-  // light theme
-  --example-color: #fc0;
+@import 'https://fonts.googleapis.com/css2?family=VT323&display=swap';
+
+body {
+  display: flex;
+  flex-direction: column;
+
+  max-width: 1440px;
+  height: 100vh;
+  height: fill-available;
+
+  font: var(--regular-font);
+  color: var(--dark-color);
+
+  background-color: var(--background-color);
+  background-image: url('../../shared/assets/images/fish-pattern-inversed.png');
+  background-repeat: repeat;
+}
+
+* {
+  box-sizing: border-box;
 }
