--- a/packages/client/src/shared/ui/Button/ui/Button.module.scss
+++ b/packages/client/src/shared/ui/Button/ui/Button.module.scss
@@ -1,38 +1,30 @@
-:root {
-  --border-btn-color: #cf5c36;
-  --btn-color-red: #cf5c36;
-  --btn-color-grey: #484848;
-}
-
 .button {
   width: 100%;
   margin-bottom: 10px;
   padding: 10px;
 
-  font-size: 48px;
-  font-weight: 400;
-  line-height: 48px;
+  font: var(--regular-font);
   color: white;
 
-  border: solid 1px var(--border-btn-color);
+  border: solid 1px var(--primary-color);
   border-radius: 50px;
 }
 
 .red {
-  background-color: var(--btn-color-red);
+  background-color: var(--primary-color);
 }
 
 .grey {
-  background-color: var(--btn-color-grey);
+  background-color: var(--secondary-color);
 }
 
-.container {
+.button__container {
   position: relative;
 
   height: 60px;
 }
 
-.icon {
+.button__icon {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -41,14 +33,12 @@
   margin: 0;
 }
 
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 768px) {
   .button {
-    font-size: 36px;
-    font-weight: 400;
-    line-height: 36px;
+    font: var(--m-regular-font);
   }
 
-  .icon {
+  .button__icon {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
