--- a/packages/client/src/pages/LeaderboardPage/ui/LeaderboardPage.module.scss
+++ b/packages/client/src/pages/LeaderboardPage/ui/LeaderboardPage.module.scss
@@ -1,13 +1,3 @@
-.layout {
-  display: flex;
-  flex-direction: column;
-  gap: 60px;
-  align-items: center;
-
-  height: 100vh;
-  padding: var(--padding);
-}
-
 .back {
   position: fixed;
 
@@ -18,7 +8,17 @@
   padding-left: var(--padding-left);
 }
 
-.entries {
+.layout {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  align-items: center;
+
+  height: 100vh;
+  padding: var(--padding);
+}
+
+.layout__entries {
   overflow: auto;
   display: flex;
   flex: 1;
@@ -31,22 +31,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  .layout {
-    gap: 20px;
-
-    padding: var(--m-padding);
-  }
-
-  .title {
-    padding-left: calc(var(--m-padding-left) + 50px + 10px);
-  }
-
-  .entries {
-    gap: 10px;
-
-    padding: 0 10px;
-  }
-
   .back {
     align-items: flex-start;
 
@@ -59,5 +43,21 @@
 
       object-fit: contain;
     }
+  }
+
+  .layout {
+    gap: 20px;
+
+    padding: var(--m-padding);
+  }
+
+  .layout__title {
+    padding-left: calc(var(--m-padding-left) + 50px + 10px);
+  }
+
+  .layout__entries {
+    gap: 10px;
+
+    padding: 0 10px;
   }
 }
