--- a/packages/client/src/shared/ui/LevelOrHpBar/ui/LevelOrHpBar.scss
+++ b/packages/client/src/shared/ui/LevelOrHpBar/ui/LevelOrHpBar.scss
@@ -7,29 +7,11 @@
   border: 4px solid black;
 
   &.level {
-    background: linear-gradient(
-      180deg,
-      #5f9fff 0%,
-      #65a3ff 20.65%,
-      #a3c8ff 20.66%,
-      #b6d3ff 52.08%,
-      #b6d3ff 80.84%,
-      #2f82ff 81.26%,
-      #1b75fb 100%
-    );
+    background: var(--blue-gradient)
   }
 
   &.hp {
-    background: linear-gradient(
-      180deg,
-      #ff5f5f 0%,
-      #ff6565 18.81%,
-      #ffa3a3 19.01%,
-      #ffb6b6 52.08%,
-      #ffb6b6 80.84%,
-      #ff2f2f 80.85%,
-      #fb1b1b 100%
-    );
+    background: var(--red-gradient)
   }
 
   &__empty {
@@ -37,16 +19,7 @@
     height: 100%;
     margin-left: auto;
 
-    background: linear-gradient(
-      180deg,
-      #5b5b5b 0%,
-      #5b5b5b 20.65%,
-      #969696 20.66%,
-      #969696 52.08%,
-      #969696 81.09%,
-      #5b5b5b 81.1%,
-      #5b5b5b 100%
-    );
+    background: var(--gray-gradient)
   }
 
   &__text {
@@ -54,10 +27,7 @@
     right: 90%;
     bottom: 35%;
 
-    font-size: 96px;
-    font-weight: 400;
-    font-style: normal;
-    line-height: 90px;
+    font:var(--title-font);
 
     filter: drop-shadow(3px 3px 0 #000);
 
