--- a/packages/client/src/widgets/ActionBlock/ui/ActionBlock.scss
+++ b/packages/client/src/widgets/ActionBlock/ui/ActionBlock.scss
@@ -17,10 +17,8 @@
   }
 
   &__text {
-    font-size: 80px;
-    font-weight: 400;
-    line-height: 80px;
-    color: #793c3b;
+    font: var(--action-block-title-font);
+    color: var(--brown-color);
 
     transition: 0.2s ease all;
   }
