feat: add reg page layout

--- a/packages/client/src/app/styles/variables/global.scss
+++ b/packages/client/src/app/styles/variables/global.scss
@@ -1,4 +1,18 @@
 :root {
-  // light theme
-  --example-color: #fc0;
+    --medium-pink-color: #d58383;
+    --light-pink-color: #ffefef;
+    --background-color: #ffe761;
+    --secondary-color: #484848;
+    --primary-color: #cf5c36;
+    --success-color: #4ab00b;
+    --light-yellow: #FFF9C7;
+    --black-color: #201d0c;
+    --white-color: #FFFFFF;
+
+    --text-l: 96px;
+    --text-m: 48px;
+    --text-s: 40px;
+
+    --main-padding-horizontal: 190px;
+    --main-padding-vertical: 110px;
 }
