--- a/packages/client/src/app/styles/index.scss
+++ b/packages/client/src/app/styles/index.scss
@@ -2,7 +2,30 @@
 @import './variables/global';
 @import './themes/dark';
 
-/* test */
-.App {
-  background-color: var(--example-color);
+@import url('https://fonts.googleapis.com/css2?family=VT323:wght@400&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'VT323', monospace;
+    background-color: var(--background-color);
+    background-image: url('@/shared/assets/images/Fishes.webp');
+    background-size: cover;
+}
+
+.root-container {
+    height: 100vh;
+    width: 100vw;
+    max-width: 1920px;
+    padding: var(--main-padding-vertical) var(--main-padding-horizontal);
+    margin: 0 auto;
+}
+
+h1 {
+    font-size: var(--text-l);
+    font-weight: 400;
 }
