--- a/packages/client/src/app/styles/variables/global.scss
+++ b/packages/client/src/app/styles/variables/global.scss
@@ -7,7 +7,7 @@
     --success-color: #4ab00b;
     --light-yellow: #FFF9C7;
     --black-color: #201d0c;
-    --white-color: #FFFFFF;
+    --white-color: #FFF;
 
     --text-l: 96px;
     --text-m: 48px;
