--- a/packages/client/src/pages/SignInPage/ui/SignInPage.module.scss
+++ b/packages/client/src/pages/SignInPage/ui/SignInPage.module.scss
@@ -1,7 +1,7 @@
 .signin__container {
   display: grid;
-  grid-template-columns: auto 500px 500px auto;
-  column-gap: 300px;
+  grid-template-columns: auto 500px 200px 500px auto;
+  column-gap: 50px;
 
   margin: 0;
 
@@ -9,7 +9,7 @@
 }
 
 .signin__title {
-  grid-column: 1 / 5;
+  grid-column: 1 / 6;
   grid-row: 1;
 
   padding: 80px 0;
@@ -29,22 +29,16 @@
 }
 
 .signin__fields {
-  grid-column: 3;
+  grid-column: 4;
   grid-row: 3/4;
 }
 
 .signin__button {
-  grid-column: 3;
+  grid-column: 4;
   grid-row: 6;
 }
 
 @media screen and (max-width: 768px) {
-  form {
-    gap: 20px;
-
-    padding: var(--m-padding);
-  }
-
   .signin__container {
     display: grid;
     grid-template-columns: auto;
