--- a/packages/client/src/app/styles/variables/global.scss
+++ b/packages/client/src/app/styles/variables/global.scss
@@ -9,6 +9,7 @@
   --secondary-color: #484848;
   --primary-color: #cf5c36;
   --success-color: #4ab00b;
+  --input-color: #fff9c7;
 
   // app padding
   --padding-top: 110px;
