--- a/packages/client/src/pages/SignInPage/ui/SignInPage.module.scss
+++ b/packages/client/src/pages/SignInPage/ui/SignInPage.module.scss
@@ -1,84 +1,96 @@
 .signin__container {
-  display: grid;
-  grid-template-columns: auto 500px 200px 500px auto;
-  column-gap: 50px;
+  display: flex;
+  flex-direction: column;
 
-  margin: 0;
-  padding-bottom: 200px;
+  padding: 80px;
+
+  text-align: center;
+}
+
+.signin__body {
+  display: flex;
+  flex-direction: row;
+  row-gap: 200px;
+  justify-content: space-between;
 
   text-align: center;
 }
 
 .signin__title {
-  grid-column: 1 / 6;
-  grid-row: 1;
-
-  padding: 80px 0;
+  padding-bottom: 80px;
 
   font: var(--title-font);
   text-align: center;
 }
 
-.signin__pet {
-  grid-column: 2;
-  grid-row: 2 / 6;
+.signin__left__column {
+  width: 550px;
 }
 
-.signin__pet__create {
-  grid-column: 2;
-  grid-row: 6;
+.signin__right__column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  width: 550px;
+  padding-top: 80px;
 }
 
-.signin__fields {
-  grid-column: 4;
-  grid-row: 3/4;
+.signin__pet__create__mobile {
+  display: none;
 }
 
-.signin__button {
-  grid-column: 4;
-  grid-row: 6;
+@media screen and (max-width: 992px) {
+  .signin__img {
+    width: 300px;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .signin__container {
-    display: grid;
-    grid-template-columns: auto;
+    display: flex;
+    flex-direction: column;
 
     width: 100%;
     padding: 30px;
+  }
+
+  .signin__body {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0;
   }
 
   .signin__title {
     display: none;
   }
 
-  .signin__pet {
-    grid-column: 1;
-    grid-row: 1;
-
-    margin-bottom: 50px;
+  .signin__left__column {
+    width: 100%;
   }
 
-  .signin__fields {
-    grid-column: 1;
-    grid-row: 2;
+  .signin__right__column {
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+    justify-content: space-between;
 
-    margin-bottom: 30px;
-  }
-
-  .signin__button {
-    grid-column: 1;
-    grid-row: 3;
-  }
-
-  .signin__pet__create {
-    grid-column: 1;
-    grid-row: 4;
-
-    padding-top: 10px;
+    width: 100%;
+    padding-top: 0;
   }
 
   .signin__img {
     width: 200px;
+    padding-bottom: 50px;
+  }
+
+  .signin__pet__create {
+    display: none;
+  }
+
+  .signin__pet__create__mobile {
+    display: block;
+
+    padding-top: 10px;
   }
 }
