--- a/packages/client/src/pages/ProfilePage/lib/ProfileModal/ui/ProfileModal.module.scss
+++ b/packages/client/src/pages/ProfilePage/lib/ProfileModal/ui/ProfileModal.module.scss
@@ -1,14 +1,14 @@
 .profile__modal_fields {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 15px;
+
+  width: 100%;
 }
 
 .profile__modal_footer {
   display: flex;
-  gap: 12px;
   justify-content: space-between;
 
   width: 100%;
-  padding: 24px 0;
 }
