--- a/packages/client/src/shared/ui/LeaderboardEntry/ui/LeaderboardEntry.module.scss
+++ b/packages/client/src/shared/ui/LeaderboardEntry/ui/LeaderboardEntry.module.scss
@@ -47,7 +47,7 @@
   padding: 10px;
 
   background: var(--light-pink-color);
-  border-radius: 75px;
+  border-radius: 100%;
 
   img {
     height: calc(100% + 10px * 2);
