--- a/packages/client/src/pages/LeaderboardPage/ui/LeaderboardPage.module.scss
+++ b/packages/client/src/pages/LeaderboardPage/ui/LeaderboardPage.module.scss
@@ -6,6 +6,13 @@
 
   height: 100%;
   padding-left: var(--padding-left);
+
+  color: var(--dark-color);
+
+  svg {
+    width: 75px;
+    height: 75px;
+  }
 }
 
 .layout {
@@ -16,6 +23,14 @@
 
   height: 100vh;
   padding: var(--padding);
+
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+  }
 }
 
 .layout__entries {
@@ -36,9 +51,9 @@
     align-items: flex-start;
 
     padding-top: calc(var(--m-padding-top) + var(--m-title-line-height) / 2 - 25px);
-    padding-left: calc(var(--m-padding-left) + 10px);
+    padding-left: calc(var(--m-padding-left) - 10px);
 
-    img {
+    svg {
       width: 50px;
       height: 50px;
 
@@ -53,12 +68,12 @@
   }
 
   .layout__title {
-    padding-left: calc(var(--m-padding-left) + 50px + 10px);
+    text-align: end;
   }
 
   .layout__entries {
     gap: 10px;
 
-    padding: 0 10px;
+    padding: 0;
   }
 }
