fix: few fixes after merging fix axios typing fix profile page file sctructure fix profile page styles

--- a/packages/client/src/pages/ProfilePage/ui/ProfilePage.module.scss
+++ b/packages/client/src/pages/ProfilePage/ui/ProfilePage.module.scss
@@ -7,7 +7,7 @@
 
   max-width: 900px;
   height: 100%;
-  margin: var(--padding-top) auto;
+  margin: var(--padding-top) auto 0 auto;
 }
 
 .profile__fields {
