--- a/packages/client/src/pages/Registration/styles.module.scss
+++ b/packages/client/src/pages/Registration/styles.module.scss
@@ -7,13 +7,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
     height: 100%;
   }
 
   &__image {
+    flex: 1;
+    
     width: 423px;
     min-height: 222px;
-    flex: 1;
   }
 
   &__desc {
@@ -24,6 +26,6 @@
   }
 
   &__right {
-    width: 550px,
+    width: 550px;
   }
 }
