--- a/packages/client/src/shared/ui/Typography/ui/styles.module.scss
+++ b/packages/client/src/shared/ui/Typography/ui/styles.module.scss
@@ -1,8 +1,8 @@
 $default-fs-l: 96px;
 $default-fs-m: 48px;
 $default-fs-s: 40px;
-$default-c-white: #FFF;
-$default-c-black: #201D0C;
+$default-c-white: #fff;
+$default-c-black: #201d0c;
 $fs-s: var(--text-s, $default-fs-s);
 $fs-m: var(--text-m, $default-fs-m);
 $fs-l: var(--text-l, $default-fs-l);
@@ -10,41 +10,41 @@ $c-white: var(--white-color, $default-c-white);
 $c-black: var(--black-color, $default-c-black);
 
 .typography {
-	&_size {
-		&_s {
-			font-size: $fs-s;
-		}
+  &_size {
+    &_s {
+      font-size: $fs-s;
+    }
 
-		&_m {
-			font-size: $fs-m;
-		}
+    &_m {
+      font-size: $fs-m;
+    }
 
-		&_l {
-			font-size: $fs-l;
-		}
-	}
+    &_l {
+      font-size: $fs-l;
+    }
+  }
 
-	&_color {
-		&_white {
-			color: $c-white;
-		}
+  &_color {
+    &_white {
+      color: $c-white;
+    }
 
-		&_black {
-			color: $c-black;
-		}
-	}
+    &_black {
+      color: $c-black;
+    }
+  }
 
-	&_align {
-		&_left {
-			text-align: left;
-		}
+  &_align {
+    &_left {
+      text-align: left;
+    }
 
-		&_right {
-			text-align: right;
-		}
+    &_right {
+      text-align: right;
+    }
 
-		&_center {
-			text-align: center;
-		}
-	}
+    &_center {
+      text-align: center;
+    }
+  }
 }
