refactor: made it possible to load several assets in one animation

--- a/packages/client/src/app/styles/index.scss
+++ b/packages/client/src/app/styles/index.scss
@@ -13,7 +13,7 @@
 body {
     font-family: 'VT323', monospace;
     background-color: var(--background-color);
-    background-image: url('@/shared/assets/images/Fishes.webp');
+    background-image: url('../../shared/assets/images/Fishes.webp');
     background-size: cover;
 }
 
