--- a/packages/client/src/pages/RegistrationPage/ui/styles.module.scss
+++ b/packages/client/src/pages/RegistrationPage/ui/styles.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 100vh;
+  padding: 110px 0;
 
   &__left {
     display: flex;
