--- a/packages/client/src/app/styles/index.scss
+++ b/packages/client/src/app/styles/index.scss
@@ -8,10 +8,11 @@ body {
   display: flex;
   flex-direction: column;
 
-  max-width: 1440px;
+  width: 100vw;
   height: 100vh;
   height: fill-available;
-  margin: 0 auto;
+
+  // margin: 0 auto;
 
   font: var(--regular-font);
   color: var(--dark-color);
