--- a/packages/client/src/pages/MainPage/ui/MainPage.module.scss
+++ b/packages/client/src/pages/MainPage/ui/MainPage.module.scss
@@ -4,7 +4,9 @@
   align-items: center;
   justify-content: space-between;
 
+  max-width: 1440px;
   height: 100vh;
+  margin: 0 auto;
 
   & > * {
     user-select: none;
