--- a/packages/client/src/pages/ProfilePage/ui/ProfilePage.module.scss
+++ b/packages/client/src/pages/ProfilePage/ui/ProfilePage.module.scss
@@ -1,7 +1,7 @@
 .profile__container {
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 50px;
   align-items: center;
   justify-content: flex-start;
 
@@ -17,4 +17,12 @@
 
   width: 100%;
   min-width: 600px;
+}
+
+.profile__buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+
+  width: max-content;
 }
