Add ForumPage, TopicListPage

--- a/packages/client/src/pages/ForumPage/shared/ui/Header/Header.module.scss
+++ b/packages/client/src/pages/ForumPage/shared/ui/Header/Header.module.scss
@@ -1,6 +1,4 @@
 .header {
-  // position: sticky;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,12 +6,20 @@
   width: 100vw;
   height: 140px;
 
-  font: var(--title-font);
   color: white;
   text-transform: uppercase;
 
   background-color: var(--dark-color);
-  background-image: url('../../../../shared/assets/images/MessagePattern.png');
+  background-image: url('../../assets/MessagePattern.png');
   background-repeat: repeat;
   background-position-y: 50%;
+
+  h1 {
+    overflow: hidden;
+
+    max-width: 1000px;
+
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
